Finish redirect wrapper component

--- a/src/app/components/main-editor/main-editor.component.html
+++ b/src/app/components/main-editor/main-editor.component.html
@@ -16,7 +16,8 @@
               </div>
             </div>
           </div>
-          <app-condition-collection></app-condition-collection>
+          <app-entrypoint-container></app-entrypoint-container>
+          <app-redirect-wrapper></app-redirect-wrapper>
         </div>
     </div>
     <div class="col-sm-6">
