Add data collection to node

--- a/src/app/components/condition-collection/condition-collection.component.html
+++ b/src/app/components/condition-collection/condition-collection.component.html
@@ -2,7 +2,7 @@
   <div class="card-header" role="tab" id="section1HeaderId">
     <h5 class="mb-0">
       <a data-toggle="collapse" data-parent="#accordianId" href="#{{'cc' + id}}" aria-expanded="true" [attr.aria-controls]="'cc' + id">
-        Conditions
+        {{name}}
         <button class="btn btn-square float-right" (click)="addCondition($event)">
           <i class="fa fa-plus"></i>
         </button>
