--- a/src/app/components/local-var-editor/local-var-editor.component.html
+++ b/src/app/components/local-var-editor/local-var-editor.component.html
@@ -1,4 +1,4 @@
-<div class="card" *ngIf="currentScope != null">
+<div class="card" *ngIf="currentScope !== null && currentScope !== undefined">
   <div class="card-header bg-primary" role="tab" id="section1HeaderId">
     <h5 class="mb-0">
       <a data-toggle="collapse" data-parent="#accordianId" href="#localVars" aria-expanded="true" aria-controls="localVars"
