--- a/src/app/components/main-editor/main-editor.component.html
+++ b/src/app/components/main-editor/main-editor.component.html
@@ -17,10 +17,10 @@
             </div>
           </div>
           <app-entrypoint-container></app-entrypoint-container>
-          <app-redirect-wrapper></app-redirect-wrapper>
         </div>
     </div>
     <div class="col-sm-6">
+      <app-node-display></app-node-display>
     </div>
     <div class="col-sm-3">
       <div id="accordianId" role="tablist" aria-multiselectable="true">
@@ -31,3 +31,5 @@
     </div>
   </div>
 </div>
+<app-project-download></app-project-download>
+<app-project-upload></app-project-upload>
