--- a/src/app/components/entrypoint-container/entrypoint-container.component.html
+++ b/src/app/components/entrypoint-container/entrypoint-container.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" *ngIf="currentInteractable !== null && currentInteractable !== undefined">
   <div class="card-header" role="tab" id="section1HeaderId">
     <h5 class="mb-0">
       <a data-toggle="collapse" data-parent="#accordianId" href="#entrypointcontainer" aria-expanded="true" aria-controls="entrypointcontainer">
@@ -13,7 +13,7 @@
   <div id="entrypointcontainer" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
     <div class="card-body">
       <div id="accordianId" role="tablist" aria-multiselectable="true">
-        <app-entrypoint [entryPoint]="entrypoint" *ngFor="let entrypoint of this.currentInteractable.entryPoints"></app-entrypoint>
+        <app-entrypoint (deleteEntryPoint)="DeleteEntryPoint(entrypoint)" [entryPoint]="entrypoint" *ngFor="let entrypoint of this.currentInteractable.entryPoints"></app-entrypoint>
       </div>
     </div>
   </div>
