--- a/src/app/components/entrypoint/entrypoint.component.html
+++ b/src/app/components/entrypoint/entrypoint.component.html
@@ -3,6 +3,10 @@
     <h5 class="mb-0">
       <a data-toggle="collapse" data-parent="#accordianId" href="#entryPoint{{entryPoint.id}}" aria-expanded="true" [attr.aria-controls]="'entryPoint' + entryPoint.id">
         {{entryPoint.name}}
+        <button type="button" class="btn btn-primary float-right" (click)="editNode(entryPoint.redirect.nodeID)" *ngIf="entryPoint.redirect.nodeID !== 'none'"><i class="fa fa-arrow-right"></i></button>
+        <button class="btn btn-danger float-right" (click)="DeleteEntryPoint()">
+            <i class="fa fa-trash"></i>
+        </button>
       </a>
     </h5>
   </div>
