--- a/src/app/components/redirect-container/redirect-container.component.html
+++ b/src/app/components/redirect-container/redirect-container.component.html
@@ -1,3 +1,19 @@
-<p>
-  redirect-container works!
-</p>
+<div class="card">
+  <div class="card-header" role="tab" id="section1HeaderId">
+    <h5 class="mb-0">
+      <a data-toggle="collapse" data-parent="#accordianId" href="#redirectcontainer{{id}}" aria-expanded="true" [attr.aria-controls]="'redirectcontainer' + id">
+        Redirects
+        <button class="btn btn-square float-right" (click)="AddRedirect()">
+            <i class="fa fa-plus"></i>
+        </button>
+      </a>
+    </h5>
+  </div>
+  <div id="redirectcontainer{{id}}" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
+    <div class="card-body">
+      <div id="accordianId" role="tablist" aria-multiselectable="true">
+          <app-redirect-wrapper [redirect]="redirect" *ngFor="let redirect of redirects"></app-redirect-wrapper>
+      </div>
+    </div>
+  </div>
+</div>
