--- a/src/app/components/node-select/node-select.component.html
+++ b/src/app/components/node-select/node-select.component.html
@@ -1,4 +1,6 @@
 <select #select [(ngModel)]="value.nodeID" (select)="OnChange($event)">
     <option value="none">None Selected</option>
-    <option [value]="node.id" *ngFor="let node of currentInteractable.nodes.array">{{node.name}}</option>
+    <option [value]="node.id" *ngFor="let node of currentInteractable.nodes.array">
+        {{node.GetName()}}
+    </option>
 </select>
