--- a/src/app/components/entrypoint/entrypoint.component.html
+++ b/src/app/components/entrypoint/entrypoint.component.html
@@ -2,7 +2,8 @@
   <div class="card-header" role="tab" id="section1HeaderId">
     <h5 class="mb-0">
       <a data-toggle="collapse" data-parent="#accordianId" href="#entryPoint{{entryPoint.id}}" aria-expanded="true" [attr.aria-controls]="'entryPoint' + entryPoint.id">
-        {{entryPoint.name}}
+        <span *ngIf="node !== undefined && node !== null">{{node.GetName()}}</span>
+        <span *ngIf="node === undefined">No node selected</span>
         <button type="button" class="btn btn-primary float-right" (click)="editNode(entryPoint.redirect.nodeID)" *ngIf="entryPoint.redirect.nodeID !== 'none'"><i class="fa fa-arrow-right"></i></button>
         <button class="btn btn-danger float-right" (click)="DeleteEntryPoint()">
             <i class="fa fa-trash"></i>
@@ -12,8 +13,7 @@
   </div>
   <div id="entryPoint{{entryPoint.id}}" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
     <div class="card-body">
-      <input type="text" class="form-control" [(ngModel)]="entryPoint.name">
-      <app-redirect [redirect]="entryPoint.redirect"></app-redirect>
+      <app-redirect (selectNode)="ChangeNode($event)" [redirect]="entryPoint.redirect"></app-redirect>
     </div>
   </div>
 </div>
