--- a/src/app/components/main-editor/main-editor.component.html
+++ b/src/app/components/main-editor/main-editor.component.html
@@ -1,4 +1,5 @@
-<div class="">
+<app-navbar></app-navbar>
+<div class="mt-2">
   <div class="row">
     <div class="col-sm-3">
         <div id="accordianId" role="tablist" aria-multiselectable="true">
@@ -31,5 +32,3 @@
     </div>
   </div>
 </div>
-<app-project-download></app-project-download>
-<app-project-upload></app-project-upload>
