--- a/src/app/components/project-download/project-download.component.html
+++ b/src/app/components/project-download/project-download.component.html
@@ -1,1 +1,1 @@
-<button (click)="DownloadProject()">Download Project File</button>
+<a class="dropdown-item" href="#" (click)="DownloadProject()">Download Project File</a>
