--- a/src/app/components/redirect-container/redirect-container.component.html
+++ b/src/app/components/redirect-container/redirect-container.component.html
@@ -1,4 +1,15 @@
-<div class="card">
+
+<div class="container" *ngIf="redirects.length === 1 && redirects[0].conditions.length === 0">
+  <div class="row">
+    <label class="mr-3">Redirect: </label>
+    <app-node-select [value]="redirects[0]"></app-node-select>
+    <app-go-to-button [nodeID]="redirects[0].nodeID" [ngClass]="'ml-3'" *ngIf="redirects[0].nodeID !== 'none'"></app-go-to-button>
+    <button class="btn btn-square float-right ml-3 btn-success" (click)="AddNewNodeToRedirect()" *ngIf="redirects[0].nodeID === 'none'">
+        <i class="fa fa-plus"></i>
+    </button>
+  </div>
+</div>
+<div class="card" *ngIf="redirects.length > 1 || redirects[0].conditions.length > 0">
   <div class="card-header" role="tab" id="section1HeaderId">
     <h5 class="mb-0">
       <a data-toggle="collapse" data-parent="#accordianId" href="#redirectcontainer{{id}}" aria-expanded="true" [attr.aria-controls]="'redirectcontainer' + id">
@@ -12,7 +23,7 @@
   <div id="redirectcontainer{{id}}" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
     <div class="card-body">
       <div id="accordianId" role="tablist" aria-multiselectable="true">
-          <app-redirect-wrapper [redirect]="redirect" *ngFor="let redirect of redirects"></app-redirect-wrapper>
+          <app-redirect-wrapper (deleteRedirect)="DeleteRedirect($event)" [redirect]="redirect" *ngFor="let redirect of redirects"></app-redirect-wrapper>
       </div>
     </div>
   </div>
