--- a/src/app/components/node-preview/node-preview.component.html
+++ b/src/app/components/node-preview/node-preview.component.html
@@ -1,30 +1,55 @@
 <div class="card" *ngIf="currentInteractable !== null && currentInteractable !== undefined">
-    <div class="card-header" role="tab" id="section1HeaderId">
-      <h5 class="mb-0">
-        <a data-toggle="collapse" data-parent="#accordianId" href="#nodePreview" aria-expanded="true" aria-controls="nodePreview">
-          Nodes
-          <button class="btn btn-square float-right" (click)="addNode($event)">
-              <i class="fa fa-plus"></i>
-          </button>
-        </a>
-      </h5>
-    </div>
-    <div id="nodePreview" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
-      <div class="card-body node-body">
-        <div *ngFor="let node of currentInteractable.nodes.array">
-          <div class="card">
-            <div class="card-body">
+  <div class="card-header" role="tab" id="section1HeaderId">
+    <h5 class="mb-0">
+      <a data-toggle="collapse" data-parent="#accordianId" href="#nodePreview" aria-expanded="true" aria-controls="nodePreview">
+        Nodes
+        <button class="btn btn-square float-right" (click)="addNode($event)">
+          <i class="fa fa-plus"></i>
+        </button>
+      </a>
+    </h5>
+  </div>
+  <div id="nodePreview" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
+    <div class="card-body">
+      <input type="text" class="form-control mb-2" [(ngModel)]="searchString" placeholder="Search Nodes...">
+      <div class="node-body">
+        <div *ngIf="searchString.length > 0">
+          <div *ngFor="let node of (currentInteractable.nodes.array | fusejs:searchString:{keys: ['name', 'text'], distance: maxSearchLength()})">
+            <div class="card">
+              <div class="card-body">
                 <h5 class="card-title">
-                    {{node.name}}
-                    <button type="button" class="btn btn-primary float-right" (click)="editNode(node.id)"><i class="fa fa-arrow-right"></i></button>
-                    <button class="btn btn-danger float-right mr-1" (click)="deleteNode(node)">
-                        <i class="fa fa-trash"></i>
-                    </button>
+                  {{node.name}}
+                  <button type="button" class="btn btn-primary float-right" (click)="editNode(node.id)">
+                    <i class="fa fa-arrow-right"></i>
+                  </button>
+                  <button class="btn btn-danger float-right mr-1" (click)="deleteNode(node)">
+                    <i class="fa fa-trash"></i>
+                  </button>
                 </h5>
                 <p>{{node.GetPreview()}}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div *ngIf="searchString.length === 0">
+          <div *ngFor="let node of currentInteractable.nodes.array">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">
+                  {{node.name}}
+                  <button type="button" class="btn btn-primary float-right" (click)="editNode(node.id)">
+                    <i class="fa fa-arrow-right"></i>
+                  </button>
+                  <button class="btn btn-danger float-right mr-1" (click)="deleteNode(node)">
+                    <i class="fa fa-trash"></i>
+                  </button>
+                </h5>
+                <p>{{node.GetPreview()}}</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
