--- a/src/app/components/game-format/game-format.component.html
+++ b/src/app/components/game-format/game-format.component.html
@@ -1,1 +1,1 @@
-<a class="dropdown-item" (click)="getJSTreeData()" href="#">Download Game Format File</a>
+<a class="dropdown-item" (click)="DownloadGameData()" href="#">Download Game Format File</a>
