--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light" style="background-color: #74b1dd;">
-    <a class="navbar-brand" href="#">Story Editor</a>
+    <a class="navbar-brand" routerLink="/">Story Editor</a>
     <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
         aria-expanded="false" aria-label="Toggle navigation"></button>
     <div class="collapse navbar-collapse" id="collapsibleNavId">
@@ -17,7 +17,9 @@
                     <input class="form-control mr-sm-2" type="text" placeholder="Project Name" (change)="OnChangeName($event.target.value)" #fileName>
                 </form>
             </li>
+            <li class="nav-item">
+                <a routerLink="/data-settings" class="nav-link">Data Settings</a>
+            </li>
         </ul>
     </div>
-    
 </nav>
