Add styles / color theme

--- a/src/app/components/choice/choice.component.html
+++ b/src/app/components/choice/choice.component.html
@@ -3,9 +3,10 @@
     <h5 class="mb-0">
       <a data-toggle="collapse" data-parent="#accordianId" href="#choice{{id}}" aria-expanded="true" [attr.aria-controls]="'choice' + id">
         {{truncateString(choice.text)}}
-        <app-go-to-button [nodeID]="choice.redirects[0].nodeID" *ngIf="choice.redirects[0] !== 'none' && choice.redirects.length == 1 && choice.redirects[0].conditions.length == 0"></app-go-to-button>
+        <app-go-to-button [nodeID]="choice.redirects[0].nodeID" 
+        *ngIf="choice.redirects[0].nodeID !== 'none' && choice.redirects.length == 1 && choice.redirects[0].conditions.length == 0"></app-go-to-button>
         <div class="dropdown open float-right">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true"
+          <button class="btn btn-secondary dropdown-toggle mr-2" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             Options
           </button>
@@ -22,12 +23,11 @@
   </div>
   <div id="choice{{id}}" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
     <div class="card-body">
-      <app-node-select [value]="choice.redirects[0]" *ngIf="choice.redirects.length == 1 && choice.redirects[0].conditions.length == 0"></app-node-select>
-      <textarea cols="30" rows="5" [(ngModel)]="choice.text" class="form-control"></textarea>
-      <app-redirect-container [redirects]="choice.redirects" *ngIf="choice.redirects.length > 1"></app-redirect-container>
+      <textarea cols="30" rows="5" [(ngModel)]="choice.text" class="form-control mb-2"></textarea>
       <app-condition-collection [conditions]="choice.conditions" *ngIf="choice.conditions !== undefined && choice.conditions !== null && choice.conditions.length > 0"></app-condition-collection>
       <app-condition-collection [name]="'Set Conditions'" [conditionOperators]="setConditionOperators" [conditions]="choice.setConditions"
         *ngIf="choice.setConditions !== undefined && choice.setConditions !== null && choice.setConditions.length > 0"></app-condition-collection>
+      <app-redirect-container [redirects]="choice.redirects" *ngIf="choice.redirects.length > 0"></app-redirect-container>
     </div>
   </div>
 </div>
