--- a/src/app/components/local-var-select/local-var-select.component.css
+++ b/src/app/components/local-var-select/local-var-select.component.css
@@ -2,6 +2,7 @@ select {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 130px;
-    width: 130px;
+    width: 120px;
+    max-width: 120px;
+    margin-right: 5px;
   }
