--- a/src/app/components/node-select/node-select.component.html
+++ b/src/app/components/node-select/node-select.component.html
@@ -1,4 +1,4 @@
-<select #select [(ngModel)]="value.nodeID" (select)="OnChange($event)">
+<select #select [(ngModel)]="value.nodeID" (select)="OnChange($event)" [ngStyle]="styles">
     <option value="none">None Selected</option>
     <option [value]="node.id" *ngFor="let node of currentInteractable.nodes.array">
         {{node.GetName()}}
