--- a/src/app/components/choice-collection/choice-collection.component.html
+++ b/src/app/components/choice-collection/choice-collection.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header" role="tab" id="section1HeaderId">
+  <div class="card-header choice" role="tab" id="section1HeaderId">
     <h5 class="mb-0">
       <a data-toggle="collapse" data-parent="#accordianId" href="#choicecollection" aria-expanded="true" aria-controls="choicecollection">
         Choices
@@ -9,7 +9,7 @@
       </a>
     </h5>
   </div>
-  <div id="choicecollection" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
+  <div id="choicecollection" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId" #collapse>
     <div class="card-body">
       <div id="accordianId" role="tablist" aria-multiselectable="true">
         <app-choice (deleteChoice)="deleteChoice($event)" [choice]="choice" *ngFor="let choice of choices"></app-choice>
