--- a/src/app/components/condition-collection/condition-collection.component.html
+++ b/src/app/components/condition-collection/condition-collection.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header" role="tab" id="section1HeaderId">
+  <div class="card-header" role="tab" id="section1HeaderId" [ngClass]="class">
     <h5 class="mb-0">
       <a data-toggle="collapse" data-parent="#accordianId" href="#{{'cc' + id}}" aria-expanded="true" [attr.aria-controls]="'cc' + id">
         {{name}}
@@ -11,31 +11,25 @@
   </div>
   <div id="{{'cc' + id}}" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId" #collapse>
     <div class="card-body">
-      <div class="row mb-2" *ngFor="let condition of conditions">
+      <div class="row form-inline mb-2" *ngFor="let condition of conditions">
         <app-local-var-select [condition]="condition" (changeCondition)="conditionChanged(condition)" *ngIf="conditionOperators.local"></app-local-var-select>
         <app-global-var-select [condition]="condition" (changeCondition)="conditionChanged(condition)" *ngIf="!conditionOperators.local"></app-global-var-select>
-        <div *ngIf="condition.type === 'string'" class="form-inline">
-          <select [(ngModel)]="condition.operator" class="form-control">
-            <option [value]="operator" *ngFor="let operator of conditionOperators.stringOperators">{{operator}}</option>
-          </select>
-          <input type="text" [(ngModel)]="condition.value" class="form-control">
-        </div>
-        <div *ngIf="condition.type === 'number'" class="form-inline">
-          <select [(ngModel)]="condition.operator" class="form-control">
-            <option [value]="operator" *ngFor="let operator of conditionOperators.numberOperators">{{operator}}</option>
-          </select>
-          <input type="number" [(ngModel)]="condition.value" class="form-control">
-        </div>
-        <div *ngIf="condition.type === 'boolean'" class="form-inline">
-          <select class="form-control" [(ngModel)]="condition.operator" *ngIf="conditionOperators.boolToggle">
-            <option value="=">=</option>
-            <option value="toggle">toggle</option>
-          </select>
-          <select (change)="onBoolChange($event, condition)" [value]="condition.value ? 'true' : 'false'" class="form-control" *ngIf="!(condition.operator === 'toggle')">
-            <option value="true">True</option>
-            <option value="false">False</option>
-          </select>
-        </div>
+        <select [(ngModel)]="condition.operator" class="form-control operatordd" *ngIf="TypeOfCondition(condition) === 'string'">
+          <option [value]="operator" *ngFor="let operator of conditionOperators.stringOperators">{{operator}}</option>
+        </select>
+        <input type="text" [(ngModel)]="condition.value" class="form-control" *ngIf="TypeOfCondition(condition) === 'string'">
+        <select [(ngModel)]="condition.operator" class="form-control operatordd" *ngIf="TypeOfCondition(condition) === 'number'">
+          <option [value]="operator" *ngFor="let operator of conditionOperators.numberOperators">{{operator}}</option>
+        </select>
+        <input type="number" [(ngModel)]="condition.value" class="form-control" *ngIf="TypeOfCondition(condition) === 'number'">
+        <select class="form-control operatordd" [(ngModel)]="condition.operator" *ngIf="conditionOperators.boolToggle && TypeOfCondition(condition) === 'boolean'">
+          <option value="=">=</option>
+          <option value="toggle">toggle</option>
+        </select>
+        <select (change)="onBoolChange($event, condition)" [value]="condition.value ? 'true' : 'false'" class="form-control" *ngIf="!(condition.operator === 'toggle') && TypeOfCondition(condition) === 'boolean'">
+          <option value="true">True</option>
+          <option value="false">False</option>
+        </select>
         <button class="btn btn-danger float-right" (click)="deleteCondition(condition)">
           <i class="fa fa-trash"></i>
         </button>
