--- a/src/app/components/data-collection/data-collection.component.css
+++ b/src/app/components/data-collection/data-collection.component.css
@@ -5,3 +5,15 @@ input {
 select {
     width: 100%;
 }
+
+.form-control {
+    margin-left: 5px;
+}
+
+.btn-danger {
+    margin-left: 5px;
+}
+
+.margin {
+    margin-right: 5px;
+}
