--- a/src/app/components/entrypoint/entrypoint.component.html
+++ b/src/app/components/entrypoint/entrypoint.component.html
@@ -1,11 +1,11 @@
 <div class="card">
-  <div class="card-header" role="tab" id="section1HeaderId">
+  <div class="card-header entrypoint" role="tab" id="section1HeaderId">
     <h5 class="mb-0">
       <a data-toggle="collapse" data-parent="#accordianId" href="#entryPoint{{entryPoint.id}}" aria-expanded="true" [attr.aria-controls]="'entryPoint' + entryPoint.id">
         <span *ngIf="node !== undefined && node !== null">{{node.GetName()}}</span>
         <span *ngIf="node === undefined">No node selected</span>
-        <button type="button" class="btn btn-primary float-right" (click)="editNode(entryPoint.redirect.nodeID)" *ngIf="entryPoint.redirect.nodeID !== 'none'"><i class="fa fa-arrow-right"></i></button>
-        <button class="btn btn-danger float-right" (click)="DeleteEntryPoint()">
+        <button type="button" class="btn btn-primary float-right" (click)="editNode(entryPoint.redirect.nodeID, $event)" *ngIf="entryPoint.redirect.nodeID !== 'none'"><i class="fa fa-arrow-right"></i></button>
+        <button class="btn btn-danger float-right mr-2" (click)="DeleteEntryPoint()">
             <i class="fa fa-trash"></i>
         </button>
       </a>
