--- a/src/app/components/main-editor/main-editor.component.html
+++ b/src/app/components/main-editor/main-editor.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-3">
         <div id="accordianId" role="tablist" aria-multiselectable="true">
           <div class="card">
-            <div class="card-header" role="tab" id="section1HeaderId">
+            <div class="card-header file-tree" role="tab" id="section1HeaderId">
               <h5 class="mb-0">
                 <a data-toggle="collapse" data-parent="#accordianId" href="#section1ContentId" aria-expanded="true" aria-controls="section1ContentId">
                   Interactables
